--- a/detail.html
+++ b/detail.html
@@ -278,19 +278,19 @@
   <div class="card mb-3 detail update-modal" id="update_modal" style="margin-left: 540px">
     <div class="row g-0">
       <div class="col-md-8">
-        <div class="card-body update-modal-content">
+             <div class="card-body update-modal-content">
           <hr>
-          <h3 class="card-text">이름 : <input type="text" placeholder=${data.name} id="update_name" value=${data.name}></h3>
+          <h3 class="card-text">이름 : <input type="text" placeholder="${data.name}" id="update_name" value="${data.name}"></h3>
           <hr>
-          <h5 class="card-text"> MBTI : <input type="text" placeholder=${data.mbti} id="update_mbti" value=${data.mbti}></h5>
+          <h5 class="card-text"> MBTI : <input type="text" placeholder="${data.mbti}" id="update_mbti" value="${data.mbti}"></h5>
           <hr>
-          <p class="card-text">나만의 장점 : <input type="text" placeholder=${data.strength} id="update_strength" value=${data.strength}></p>
+          <p class="card-text">나만의 장점 : <input type="text" placeholder="${data.strength}" id="update_strength" value="${data.strength}"></p>
           <hr>
-          <p class="card-text">자신의 스타일 : <input type="text" placeholder=${data.style} id="update_style" value=${data.style}></p>
+          <p class="card-text">자신의 스타일 : <input type="text" placeholder="${data.style}" id="update_style" value="${data.style}"></p>
           <hr>
-          <p class="card-text">블로그 : <input type="text" placeholder=${data.blog} id="update_blog" value=${data.blog}></p>
+          <p class="card-text">블로그 : <input type="text" placeholder="${data.blog}" id="update_blog" value="${data.blog}"></p>
           <hr>
-          <p class="card-text">이미지 : <input type="text" placeholder=${data.image} id="update_image" value=${data.image}></p>
+          <p class="card-text">이미지 : <input type="text" placeholder="${data.image}" id="update_image" value="${data.image}"></p>
           <hr>
         </div>
         <div class="update-modal-content-button">
