--- a/index.html
+++ b/index.html
@@ -71,7 +71,16 @@
       }
 
       .carousel-caption > h1 {
-        margin-bottom: 3rem;
+        margin-bottom: 2rem;
+      }
+
+      .carousel-caption > h3 {
+        margin-bottom: 1.5rem;
+      }
+
+      .carousel-caption > h3 > li {
+        font-size: smaller;
+        margin-top: 5px;
       }
 
       #rows-container {
@@ -395,11 +404,10 @@
             <div class="container">
               <div class="carousel-caption">
                 <h1>팀 목표</h1>
-                <h3>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                  mattis fringilla commodo. Donec at magna in lorem vehicula
-                  tempus ullamcorper id leo.
-                </h3>
+                <h3>1. 매일 계획한 일정 소화하기</h3>
+                <h3>2. 부끄러워도 팀원들과 튜터님들께 질문하기</h3>
+                <h3>3. 이번 프로젝트 포트폴리오로 사용하기</h3>
+                <h3>4. TIL 매일 작성하기</h3>
               </div>
             </div>
           </div>
@@ -419,9 +427,26 @@
               <div class="carousel-caption text-end">
                 <h1>팀 시간 약속</h1>
                 <h3>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed
-                  mattis fringilla commodo. Donec at magna in lorem vehicula
-                  tempus ullamcorper id leo.
+                  오전
+                  <li>09:30 ~ 10:00 : 데일리 스크럼</li>
+                  <li>10:00 ~ 10:30 : 알고리즘 학습 1일 1문제 목표!</li>
+                </h3>
+                <h3>
+                  오후
+                  <li>
+                    14:00 ~ 18:00 : 집중 코딩 시간<br />
+                    개별 코딩 작성 (모르는 부분은 팀원들과의 토론을 통해 해결)
+                  </li>
+                </h3>
+                <h3>
+                  저녁
+                  <li>
+                    20:00 ~ 20:30 : 하루 회고 진행 (개인별 진척도 및 체크리스트
+                    확인)
+                  </li>
+                  <li>
+                    20:30 ~ 21:00 : TIL 작성, 자기 피드백 및 다음날 일정 확인
+                  </li>
                 </h3>
               </div>
             </div>
