상세보기 버튼 수정

--- a/detail.html
+++ b/detail.html
@@ -412,7 +412,7 @@
         `<img height=140 width= 140 src="${image}" alt="...">
             <h2 class="fw-normal">${name}</h2>
             <p>
-              <a class="btn btn-secondary detail-btn">View details »</a>
+              <a class="btn btn-secondary detail-btn">상세보기 »</a>
             </p>
             <input class="uid" id="uid" value=${uid}>
           </div>`;
